-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0
-
3
-
9223372036854775807
During format of a Lustre target, the mkfs.lustre command sometimes crash with a segmentation fault.
It occurs at the end of the process so the target is well formatted anyway.
# mkfs.lustre -v --reformat --quiet "--fsname=fs1" --ost --index=0 "--mgsnode=mexico9@o2ib5" "--mkfsoptions=-m 0 -E lazy_itable_init=0,lazy_journal_init=0" --device-size=4194304 /var/loop/ost0
Permanent disk data:
Target: fs1:OST0000
Index: 0
Lustre FS: fs1
Mount type: ldiskfs
Flags: 0x62
(OST first_time update )
Persistent mount opts: errors=remount-ro
Parameters: mgsnode=10.128.0.13@o2ib5
formatting backing filesystem ldiskfs on /dev/loop0
target name fs1:OST0000
4k blocks 1048576
options -m 0 -J size=163 -I 256 -q -O extents,uninit_bg,dir_nlink,quota,huge_file,flex_bg -G 256 -E lazy_itable_init=0,lazy_journal_init=0,resize=4290772992 -F
mkfs_cmd = mke2fs -j -b 4096 -L fs1:OST0000 -m 0 -J size=163 -I 256 -q -O extents,uninit_bg,dir_nlink,quota,huge_file,flex_bg -G 256 -E lazy_itable_init=0,lazy_journal_init=0,resize=4290772992 -F /dev/loop0 1048576
Writing CONFIGS/mountdata
Segmentation fault
After analysis of the problem, it appears the stack is corrupted.
Issue comes from enable_default_ext4_features() routine.
I am going to push a patch that fixes the problem.
The bug probably affects other Lustre versions.
- is related to
-
LU-7919 Buffer overflow in mount_lustre: parse_ldd(),append_option()
-
- Resolved
-