LU-7965 utils: fix stack corruption in mkfs.lustre

This patch fixes a stack corruption that randomly happens when
formating a Lustre target. A call to append_unique() routine
was done with a wrong maxbuflen value.

Signed-off-by: Gregoire Pichon <gregoire.pichon@bull.net>
Change-Id: I8838b90a1dcda7c27457c0be0246e216856e7d5d
Reviewed-on: http://review.whamcloud.com/19260
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: lokesh.jaliminche <lokesh.jaliminche@seagate.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>